--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <script src="https://unpkg.com/browse/@n8d/htwoo-core@<version>/dist/js/"></script>
 </head>
 
-<body>
-  
+<body class="system-chrome-alt-high-color">
+  <header class="navbar">
+    
+  </header>
 </body>
 </html>
