--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -21,6 +21,9 @@
 <body class="system-chrome-alt-high-color" onresize="DetectMobileMode();">
   <header class="navbar">
     <img id="logo_img" src="img/app_logo.png" alt="logo_img" />
+    <button id="home-command" class="activated-menu-item">
+      
+    </button>
   </header>
 </body>
 </html>
