--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 <body class="system-chrome-alt-high-color" onresize="DetectMobileMode();">
   <header class="navbar">
     <img id="logo_img" src="img/app_logo.png" alt="logo_img" />
-    <button id="home-command" class="activated-menu-item">
-      
+    <div id="navbar_separator" class="vertical-separator" />
+    <button id="home-command" class="activated-menu-item" style="position: relative; left: 25px; bottom: 5px;">
+      <i class="fluent_icons" style="font-size: 22px;"></i>
+      <a id="menu-item-text" style="position: relative; left: 6px; bottom: 5px; padding-right: 8px;">Home</a>
     </button>
   </header>
 </body>
