--- a/index.html
+++ b/index.html
@@ -1,31 +1,15 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Power Editor</title>
 
-  <title>Power Editor - best way to edit your code.</title>
-  
-  <!-- HTML -->
-  
-
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css" />
-  <script src="main.js"></script>
-  <script src="mobile.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/browse/@n8d/htwoo-core@<version>/dist/css/htwoo.min.css">
-  <script src="https://unpkg.com/browse/@n8d/htwoo-core@<version>/dist/js/"></script>
-</head>
-
-<body class="system-chrome-alt-high-color" onresize="DetectMobileMode();">
-  <header class="navbar">
-    <img id="logo_img" src="img/app_logo.png" alt="logo_img" />
-    <div id="navbar_separator" class="vertical-separator" />
-    <button id="home-command" class="activated-menu-item" style="position: relative; left: 25px; bottom: 5px;">
-      <i class="fluent_icons" style="font-size: 22px;"></i>
-      <a id="menu-item-text" style="position: relative; left: 6px; bottom: 5px; padding-right: 8px;">Home</a>
-    </button>
-  </header>
-</body>
+        <link rel="stylesheet" href="styles/splashscreen.css" />
+        <script src="index.js"></script>
+    </head>
+    <body>
+        <img id="app_logo" src="img/app_logo.png" />
+    </body>
 </html>
