--- a/home.html
+++ b/home.html
@@ -34,5 +34,11 @@
       </div>
     </div>
   </header>
+  <div class="progress-ring" style="margin-top: 100px; margin-left: 100px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="ring">
+        <circle class="static" cx="50%" cy="50%" r="43.75%"></circle>
+        <circle class="dynamic" cx="50%" cy="50%" r="43.75%"></circle>
+    </svg>
+  </div>
 </body>
 </html>
