--- a/home.html
+++ b/home.html
@@ -32,7 +32,26 @@
             </span>
         </button>
       </div>
+      <div class="ms-menu-item">
+        <button class="ms-menu-button" style="width: auto;">
+            <span class="button_content">
+                <i class="fluent-icons"></i>
+                <span class="menu-button-label">What's new</span>
+            </span>
+        </button>
+      </div>
+      <div class="ms-menu-item">
+        <button class="ms-menu-button" style="width: auto;">
+            <span class="button_content">
+                <i class="fluent-icons"></i>
+                <span class="menu-button-label">Get from Microsoft Store</span>
+            </span>
+        </button>
+      </div>
     </div>
+    <button id="send_review_button" class="ms-button-accent">
+        <span class="button_label">Send review</span>
+    </button>
   </header>
   <div class="progress-ring" style="margin-top: 100px; margin-left: 100px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="ring">
