--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -23,7 +23,7 @@
 <body class="system-chrome-alt-high-color" onresize="DetectMobileMode();">
   <header class="navbar">
     <img id="logo_img" src="img/app_logo.png" alt="logo_img" />
-    <div id="navbar_separator" class="vertical-separator" />
+    <div id="navbar_separator" class="vertical-separator"></div>
     <div id="desktop_menu" class="ms-menu" style="position: fixed; top: 17px; left: 105px;">
       <div class="ms-menu-item">
         <button class="ms-menu-button-selected" style="width: 81px;">
