--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
         </button>
       </div>
     </div>
-    <div id="SearchBoxControl" class="ms-textbox" style="position: absolute; top: 18px; right: 130px; height: 35px; width: 220px;">
+    <div id="SearchBoxControl" class="ms-textbox" style="position: fixed; top: 18px; right: 130px; height: 35px; width: 220px;">
       <input id="SearchBoxInput" class="ms-text-input" type="text" placeholder="Search here..." autocomplete="true" />
       <i class="ms-textbox-icon icon-ic_fluent_search_20_regular"></i>
     </div>
