--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="styles/winui-web.css" />
   <link rel="stylesheet" href="fonts/FluentSystemIcons-Regular.css" />
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="main.js"></script>
   <script src="mobile.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/browse/@n8d/htwoo-core@<version>/dist/css/htwoo.min.css">
@@ -22,9 +23,12 @@
 
 <body class="system-chrome-alt-high-color" onresize="DetectMobileMode();">
   <header class="navbar">
-    <img id="logo_img" src="img/app_logo.png" alt="logo_img" />
+    <div id="navbar-logo">
+        <img id="logo_img" src="img/app_logo.png" alt="logo_img" />
+        <a id="logo-text">Widgets</a>
+    </div>
     <div id="navbar_separator" class="vertical-separator"></div>
-    <div id="desktop_menu" class="ms-menu" style="position: fixed; top: 17px; left: 105px;">
+    <div id="desktop_menu" class="ms-menu">
       <div class="ms-menu-item">
         <button class="ms-menu-button-selected" style="width: 81px;">
             <span class="button_content">
@@ -44,21 +48,37 @@
       <div class="ms-menu-item">
         <button class="ms-menu-button" style="width: auto;">
             <span class="button_content">
-                <i class="fluent-icons"></i>
-                <span class="menu-button-label">Get from Microsoft Store</span>
+                <i class="fluent-icons"></i>
+                <span class="menu-button-label">Docs</span>
             </span>
         </button>
       </div>
       <div class="ms-menu-item">
+        <button class="ms-menu-button" style="width: auto;">
+            <span class="button_content">
+                <i class="fluent-icons"></i>
+                <span class="menu-button-label">Widgets</span>
+            </span>
+        </button>
+      </div>
+      <!--<div class="ms-menu-item">
+        <button class="ms-menu-button" style="width: auto;">
+            <span class="button_content">
+                <i class="fluent-icons"></i>
+                <span class="menu-button-label">Get from Microsoft Store</span>
+            </span>
+        </button>
+      </div> -->
+      <!--<div class="ms-menu-item">
         <button class="ms-menu-button" style="width: auto;">
           <span class="button_content">
             <i class="fluent-icons icon-ic_fluent_settings_20_regular">&#xE700;</i>
             <span class="menu-button-label">Settings</span>
           </span>
         </button>
-      </div>
+      </div> -->
     </div>
-    <div id="SearchBoxControl" class="ms-textbox" style="position: fixed; top: 18px; right: 130px; height: 35px; width: 220px;">
+    <div id="SearchBoxControl" class="ms-textbox" style="position: fixed; top: 18px; right: 140px; height: 35px; width: 220px;">
       <input id="SearchBoxInput" class="ms-text-input" type="text" placeholder="Search here..." autocomplete="true" />
       <i class="ms-textbox-icon icon-ic_fluent_search_20_regular"></i>
     </div>
@@ -69,7 +89,51 @@
   <div id="content">
     <section id="start">
       <div id="start_content">
-         
+         <h1 id="page-title" class="ms-textblock">Meet new Widgets for Windows</h1>
+         <p id="page-description" class="ms-textblock">
+             Power Widgets is new way to customize your at-a-glance info.<br />
+             With new widgets and mini-apps you can explore info and get fast access to important things.<br />
+         </p>
+         <div id="start-buttons-grid" style="text-align: center; margin-top: 150px;">
+             <button class="ms-button" style="height: 60px; width: 260px; margin: 5px;">
+                <div style="display: table;text-align: center;position: relative;top: -5px;left: 16px;">
+                  <img height="24px" width="24px" src="https://img.icons8.com/fluency/48/000000/microsoft-store.png" style="justify-content: middle; display: inline-block; position: relative; top: -2px;" />
+                  <div style="display: inline-block;position: relative;left: 13px;">
+                      <p style="text-align: left;">
+                        <b style="font-weight: bold; font-size: 16px;">Get from Microsoft Store</b><br />
+                        Totally 1.99$<br />
+                      </p>
+                  </div>
+                </div>
+             </button>
+             <button class="ms-button" style="height: 60px; width: 260px; margin: 5px;">
+                <div style="display: table;text-align: center;position: relative;top: -5px;left: 16px;">
+                  <img height="24px" width="24px" src="https://img.icons8.com/fluency/48/000000/product.png" style="justify-content: middle; display: inline-block; position: relative; top: -2px;" />
+                  <div style="display: inline-block;position: relative;left: 13px;">
+                      <p style="text-align: left;">
+                        <b style="font-weight: bold; font-size: 16px;">Get application package</b><br />
+                        For students and education<br />
+                      </p>
+                  </div>
+                </div>
+             </button>
+             <button class="ms-button" style="height: 60px; width: 260px; margin: 5px;">
+                <div style="display: table;text-align: center;position: relative;top: -5px;left: 16px;">
+                  <img height="24px" width="24px" src="https://img.icons8.com/fluency/48/000000/gift--v1.png" style="justify-content: middle; display: inline-block; position: relative; top: -2px;" />
+                  <div style="display: inline-block;position: relative;left: 13px;">
+                      <p style="text-align: left;">
+                        <b style="font-weight: bold; font-size: 16px;">Get a gift</b><br />
+                        Contact with me<br />
+                      </p>
+                  </div>
+                </div>
+             </button>
+         </div>
+         <div id="app-preview-image" class="ms-grid ms-acrylic-brush">
+             <div id="clock-widget" class="widget-base">
+                
+             </div>
+         </div>
       </div>
     </section>
   </div>
