--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Power Editor</title>
+        <title>Power Widgets - personalized widgets feed for Windows</title>
 
         <link rel="stylesheet" href="styles/splashscreen.css" />
         <script src="index.js"></script>
