--- a/home.html
+++ b/home.html
@@ -123,7 +123,7 @@
                   <div style="display: inline-block;position: relative;left: 13px;">
                       <p style="text-align: left;">
                         <b style="font-weight: bold; font-size: 16px;">Get a gift</b><br />
-                        Contact with me<br />
+                        Get promo-code<br />
                       </p>
                   </div>
                 </div>
