--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
   <head>
@@ -23,17 +23,17 @@
   
   <body id="rootLayout">
     <section id="getting-started">
-      <div id="getting-started-div">
-        <div class="table">
-          <div class="app-icon" style="height: 86px; width: 86px; position: relative; top: 0px;">
-            <img class="app-icon-picture" src="" style="height: 55px; width: 55px;" />
-          </div>
+      <div id="getting-started-div" class="ui-page-transition">
+        <div class="table" style="width: 100%;">
+          <!-- <div class="app-icon" style="height: 86px; width: 86px; position: relative; top: -3px;"> -->
+<!--        <img class="app-icon-picture" src="" style="height: 55px; width: 55px; left: 50%; transform: translate(-77%, -50%);" /> -->
+<!--      </div> -->
           <div class="app-icon" style="margin-left: 24px; margin-right: 24px;">
             <img class="app-icon-picture" src="../assets/app-logo.png" />
           </div>
-          <div class="app-icon" style="height: 86px; width: 86px; position: relative; top: 10px;">
-            <img class="app-icon-picture" src="" />
-          </div>
+          <!-- <div class="app-icon" style="height: 86px; width: 86px; position: relative; top: -3px;"> -->
+<!--        <img class="app-icon-picture" src="" style="height: 55px; width: 55px; left: 50%; transform: translate(-77%, -50%);" /> -->
+<!--      </div> -->
         </div>
         <h1 id="getting-started-title" style="font-size: 40px;">Create, edit, build, create more faster and comfortable.</h1>
         <p id="getting-started-description" style="position: relative; font-size: 20px;">
