--- a/main.html
+++ b/main.html
@@ -93,6 +93,9 @@
         <fluent-progress-ring id="progress-ui"></fluent-progress-ring>
         <iframe id="rootFrame" onload="var pageHeight = parseInt(rootLayout.clientHeight); var pageWidth = parseInt(rootLayout.clientWidth); document.getElementById('rootFrame').width = pageWidth; document.getElementById('rootFrame').height = pageHeight;" />
       </div>
+      <div id="navigation-view">
+        
+      </div>
     </fluent-design-system-provider>
   </body>
 </html>
