--- a/pages/home.html
+++ b/pages/home.html
@@ -37,7 +37,7 @@
             <img class="app-icon-picture" src="https://img.icons8.com/fluency/96/000000/console.png" style="height: 38px; width: 38px; left: 50%; transform: translate(-86%, -50%);" />
           </div>
         </div>
-        <h1 id="getting-started-title" class="typing-text" style="font-size: 40px;">Create(); Edit(); Build(); more faster and comfortable.</h1>
+        <h1 id="getting-started-title" class="typing-text" style="font-size: 40px; height: auto; width: 100%;">Create(); Edit(); Build(); more faster and comfortable.</h1>
         <p id="getting-started-description" style="position: relative; font-size: 20px;">
           Power Editor is created for more comfortable code and text writing exlusively for Windows devices. Powerful code environment provide more productivity and new features based on UWP and WinUI user experience. Build the future with next Gen editor for Windows.
         </p>
