--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -16,14 +16,13 @@
     <script type="module" src="feedback.js"></script>
   </head>
   <body id="rootLayout">
-    <div id="start-pane">
-      <span style="padding-left: 45px; position: relative; display: inline-block; top: 128px;">
-        <h1 id="start-pane-title">Welcome to Power Editor docs!</h1>
+    <div id="start-pane" style="height: auto;">
+      <span id="start-pane-content" style="padding-left: 45px; padding-top: 95px; padding-bottom: 80px; position: relative; display: inline-block;">
+        <h1 id="start-pane-title">Provide feedback!</h1>
         <p style="max-width: 350px;">
-          Here you can find documentation from the developers, which
-          may help you get a better user experience.
+          Here you can provide your user experience stuff and share
+          your ideas and suggestions for us.
         </p>
-        <fluent-button appearance="accent" style="position: relative; top: 10px;">Ask developers</fluent-button>
       </span>
     </div>
   </body>
