--- a/pages/home.html
+++ b/pages/home.html
@@ -65,15 +65,15 @@
             </fluent-button>
           </div>
           <div style="display: inline-block;">
-            <fluent-button id="get-trial-button" style="display: table; margin: 3px; margin-top: 0px;">
-              <div style="padding: 8px; padding-left: 10px; padding-right: 10px;">
-                <img height="26px" width="26px" style="display: inline-block; position: relative; top: -4px; left: -3px;" src="https://img.icons8.com/fluency/96/000000/feedback-hub.png" />
-                <span style="display: inline-block; text-align: left; position: relative; left: 5px;">
-                  <a><b>Share your feedback</b></a><br />
-                  <a>Describe your using experience</a>
-                </span>
-              </div>
-            </fluent-button>
+              <fluent-button id="get-trial-button" style="display: table; margin: 3px; margin-top: 0px;" onclick="document.location.href = 'feedback.html';">
+                <div style="padding: 8px; padding-left: 10px; padding-right: 10px;">
+                  <img height="26px" width="26px" style="display: inline-block; position: relative; top: -4px; left: -3px;" src="https://img.icons8.com/fluency/96/000000/feedback-hub.png" />
+                  <span style="display: inline-block; text-align: left; position: relative; left: 5px;">
+                    <a><b>Share your feedback</b></a><br />
+                    <a>Describe your using experience</a>
+                  </span>
+                </div>
+              </fluent-button>
           </div>
         </div>
       </div>
