--- a/privacy.html
+++ b/privacy.html
@@ -7,6 +7,6 @@
         var instanceHelper = new WebAppInstanceHelper(true);
         instanceHelper.SetInstanceEntryPoint("docs/pages/privacy.html");
     
-        document.location.href = "/main.html";
+        document.location.href = "/PowerEditor/main.html";
     </script>
 </html>
