--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -44,7 +44,40 @@
     </section>
     <!-- Feedback form end region -->
     <!-- Footer region -->
-    
+    <footer class="footer-ui">
+      <div id="footer-ui-content" class="table" style="padding-top: 22px; padding-bottom: 56px; display: table;">
+        <fluent-anchor id="footer-contact-action" style="display: inline-block; margin: 4px; margin-top: 8px;">
+          <span style="margin: 10px; display: block;">
+            <img height="22px" width="22px" src="https://img.icons8.com/fluency/96/000000/microsoft-people.png" style="position: relative; top: 2px;" />
+            <a style="font-size: 14px; margin-left: 6px; position: relative; bottom: 3px;">Contact</a>
+          </span>
+        </fluent-anchor>
+        <fluent-anchor id="feedback-footer-action" style="display: inline-block; margin: 4px;">
+           <span style="margin: 10px; display: block;">
+            <img height="22px" width="22px" src="https://img.icons8.com/fluency/96/000000/feedback-hub.png" style="position: relative; top: 2px;" />
+            <a style="font-size: 14px; margin-left: 6px; position: relative; bottom: 3px;">Provide feedback</a>
+          </span> 
+        </fluent-anchor>
+        <fluent-anchor style="display: inline-block; margin: 4px; margin-top: 15px;">
+           <span style="margin: 10px; display: block;">
+            <img height="22px" width="22px" src="/assets/store-logo.png" style="position: relative; top: 2px;" />
+            <a style="font-size: 14px; margin-left: 6px; position: relative; bottom: 3px;">Microsoft Store</a>
+          </span>
+        </fluent-anchor>
+        <fluent-anchor id="privacy-policy-action" style="display: inline-block; margin: 4px; margin-top: 15px;">
+           <span style="margin: 10px; display: block;">
+            <img height="22px" width="22px" src="https://img.icons8.com/fluency/96/000000/windows-defender.png" style="position: relative; top: 2px;" />
+            <a style="font-size: 14px; margin-left: 6px; position: relative; bottom: 3px;">Privacy policy</a>
+          </span>
+        </fluent-anchor>
+        <fluent-anchor style="display: inline-block; margin: 4px; margin-top: 15px;">
+           <span style="margin: 10px; display: block;">
+            <img height="22px" width="22px" src="https://img.icons8.com/fluency/96/000000/twitter.png" style="position: relative; top: 2px;" />
+            <a style="font-size: 14px; margin-left: 6px; position: relative; bottom: 2px;">Twitter</a>
+          </span>
+       </fluent-anchor>
+      </div>
+    </footer> 
     <!-- Footer end region -->
     </fluent-design-provider>
   </body>
