--- a/pages/home.html
+++ b/pages/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     
-    <title>Power Editor</title>
+    <title>Power Editor - modern & powerfull editor</title>
     
     <!-- ReactJS -->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
@@ -39,7 +39,16 @@
           </div>
         </div>
         <h1 id="getting-started-title" class="typing-text" style="font-size: 40px; height: auto; width: 100%;">Create(); Edit(); Build(); more faster and comfortable.</h1>
-        <p id="getting-started-description" style="position: relative; font-size: 20px; top: -24px;">
+        <div id="features-list" style="position: relative; top: -10px;">
+          <span class="badge" style="margin: 3px;">#Csharp</span>
+          <span class="badge" style="margin: 3px;">#C++</span>
+          <span class="badge" style="margin: 3px;">#JavaScript</span>
+          <span class="badge" style="margin: 3px;">#HTML</span>
+          <span class="badge" style="margin: 3px;">#CSS</span>
+          <span class="badge" style="margin: 3px;">#JSON</span>
+          <span class="badge" style="margin: 3px;">#XAML</span>
+        </div>
+        <p id="getting-started-description" style="position: relative; font-size: 20px; top: -4px;">
           Power Editor is created for more comfortable code and text writing exlusively for Windows devices. Powerful code environment provide more productivity and new features based on UWP and WinUI user experience. Build the future with next Gen editor for Windows.
         </p>
         <div id="getting-started-commands">
@@ -78,6 +87,7 @@
           </div>
         </div>
       </div>
+      <span id="screenshot-ui"></span>
     </section>
   </body>
 
